#214 - CRUD for query templates
- add delete method for query template
