# src/main/java/de/numcodex/feasibility_gui_backend/query/v3/QueryTemplateHandlerRestController.java
@@ -18,13 +18,7 @@ import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import org.springframework.web.util.UriComponentsBuilder;
 
@@ -125,6 +119,17 @@ public class QueryTemplateHandlerRestController {
       }
     });
     return new ResponseEntity<>(ret, HttpStatus.OK);
+  }
+
+  @DeleteMapping(path = "/{queryTemplateId}")
+  public ResponseEntity<Object> deleteQueryTemplate(@PathVariable(value = "queryTemplateId") Long queryTemplateId,
+                                                    Principal principal) {
+    try {
+      queryHandlerService.deleteQueryTemplate(queryTemplateId, principal);
+      return new ResponseEntity<>(HttpStatus.OK);
+    } catch (QueryTemplateException e) {
+      return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+    }
   }
 
   @GetMapping(path = "/validate")
